# rl-model-zoo

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  _run_tests.sh  pyproject.toml
examples/: example_dual_lr.py  example_hgf.py  example_q_learning.py  example_rescorla_wagner.py  example_td_learning.py
models/: __init__.py  dual_lr.py  hgf.py  q_learning.py  rescorla_wagner.py  td_learning.py
tests/: __init__.py  test_dual_lr.py  test_hgf.py  test_q_learning.py  test_rescorla_wagner.py  test_td_learning.py
